Refactored backend to be more reusable